[develop] Fixed gap for healthcare band in mobile.

--- a/health/sass/components/bands/_extends.scss
+++ b/health/sass/components/bands/_extends.scss
@@ -159,6 +159,7 @@
         font-size: 19px;
         margin-bottom: uikit-space(.5);
       }
+      padding-top: 0;
       position: relative;
 
       @extend .col-sm-6;
